tests/baselines/reference/recursiveBaseConstructorCreation3.errors.txt
tests/cases/compiler/recursiveBaseConstructorCreation3.ts(6,27): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/recursiveBaseConstructorCreation3.ts (1 errors) ====
    declare class base<T> {
    }
    declare class abc<T> extends base<T> {
        foo: xyz;
    }
    declare class xyz extends abc {
                              ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    }
    
    var bar = new xyz();
    var r: xyz = bar.foo;